# mailinator-rs

./: Cargo.toml  README.md
api/: Cargo.toml
api/tests/: hello_test.rs
client/: Cargo.toml
config/: Cargo.toml
src/: lib.rs  path.rs
src/api/: mod.rs
src/api/domains/: mod.rs
src/api/message/: attachment.rs  inbox.rs  link.rs  message.rs  mod.rs
src/api/rules/: mod.rs
src/api/stats/: mod.rs
src/client/: mod.rs
src/config/: mod.rs
tests/: hello_test.rs
