
[workspace]
members = ["config", "api", "client"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.6"
dotenv_config = "0.1.3"
tracing = "0.1"
eyre = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json", "stream", "rustls-tls", "multipart"] }