[package]
name = "mailinator-rs"
version = "0.1.2"
authors = ["Alejandro Llanes <sombra.libre@gmail.com>"]
edition = "2021"
description = "Api wrapper for Mailinator."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sombralibre/mailinator-rs"
repository = "https://github.com/sombralibre/mailinator-rs"
keywords = ["email", "api"]
categories = ["email"]
documentation = "https://docs.rs/mailinator-rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.12.0"
serde_qs = "0.12.0"
dotenvy = "0.15.6"
dotenv_config = "0.1.3"
tracing = "0.1"
eyre = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json", "stream", "rustls-tls", "multipart"] }
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }