[package]
name = "mailinator-rs"
version = "0.1.0"
authors = ["Alejandro Llanes <sombra.libre@gmail.com>"]
edition = "2021"
description = "Api wrapper for Mailinator."
license = "MIT"
readme = "README.md"

[dependencies]
config ={ path = "../config", version = "0.0.0"}
client ={ path = "../client", version = "0.0.0"}